[package]
name = "ctxmap"
version = "0.3.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/ctxmap"
documentation = "https://docs.rs/ctxmap/"
keywords = ["map", "reference", "scope", "lifetime"]
categories = ["data-structures"]
description = "A collection that can store references of different types and lifetimes."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12.0"
